# DMProject

./: CMakeLists.txt  README.md  data.txt  data2.txt  main.cpp  test.txt
Data/: Outlier.ipynb  data_points.txt  outlier_correct.txt  outlier_incorrect.txt
Data/.ipynb_checkpoints/: Outlier-checkpoint.ipynb
Linear_regression/: CMakeLists.txt  README.md  data_frame.cpp  data_frame.h  helper.cpp  helper.h  linear_regression.cpp  linear_regression.h  parser.cpp  parser.h  test2.cpp  test2.h
Matrix/: README.md  chm_iterator.h  matrix.h  mem_base.h  my_vec.h
